--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -1,3 +1,7 @@
+<ion-content>
+    Hello
+</ion-content>
+
 <ion-content *ngIf="_transactions?.data" padding>
     <br>
     <ion-list *ngFor="let transaction of _transactions.data">
