--- a/src/pages/give-car/give-car.html
+++ b/src/pages/give-car/give-car.html
@@ -1,7 +1,11 @@
 <ion-header>
     <ion-navbar>
-        <!--<ion-icon name="menu" menuToggle padding></ion-icon>-->
-        <ion-title>REQUESTS</ion-title>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>
+            REQUESTS
+        </ion-title>
     </ion-navbar>
 </ion-header>
 <ion-content *ngIf="_transactions?.data" padding>
