--- a/src/pages/history-tab/history-tab.html
+++ b/src/pages/history-tab/history-tab.html
@@ -1,6 +1,11 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>My History</ion-title>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>
+            MY HISTORY
+        </ion-title>
     </ion-navbar>
 </ion-header>
 
