--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -1,6 +1,11 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>Registration Information</ion-title>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>
+            PROFILE
+        </ion-title>
     </ion-navbar>
 </ion-header>
 
