--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -1,7 +1,11 @@
 <ion-header>
     <ion-navbar>
-        <ion-icon name="menu" menuToggle padding></ion-icon>
-        <ion-title>Dashboard</ion-title>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>
+            Dashboard
+        </ion-title>
     </ion-navbar>
 </ion-header>
 <ion-content class="card-background-page">
