--- a/src/pages/get-ride/get-ride.html
+++ b/src/pages/get-ride/get-ride.html
@@ -1,7 +1,11 @@
 <ion-header>
     <ion-navbar>
-        <!--<ion-icon name="menu" menuToggle padding></ion-icon>-->
-        <ion-title>GET A RIDE</ion-title>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>
+            GET RIDE
+        </ion-title>
     </ion-navbar>
 </ion-header>
 <ion-content padding>
@@ -73,14 +77,15 @@
                 </ion-item>
             </ion-col>
         </ion-row>
+        <button ion-button full class="input" (click)="submitGetRide()">SUBMIT</button>
     </ion-list>
 
-    <ion-footer>
+    <!--<ion-footer>
         <ion-toolbar>
             <ion-title>
                 <button ion-button full class="input" (click)="submitGetRide()">SUBMIT</button>
             </ion-title>
         </ion-toolbar>
-    </ion-footer>
+    </ion-footer>-->
 
 </ion-content>
