--- a/src/pages/get-car/get-car.html
+++ b/src/pages/get-car/get-car.html
@@ -88,7 +88,7 @@
             Price: {{ _price | currency:'MYR':true:'1.2-2' }}
         </ion-col>
     </ion-row>
-    <button ion-button full class="input" (click)="submitGetRide()">SUBMIT</button>
+    <button ion-button full class="input" (click)="submitGetCar()">SUBMIT</button>
 
     <!--<ion-footer>
         <ion-toolbar>
